infisical/HTTPRoute.infisical.k8s.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infisical
  namespace: infisical
spec:
  hostnames:
    - infisical.madhan.app
    - infisical.local
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: infisical-infisical-standalone-infisical
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
